Sandbox plugin (#98806)
* Move the code arround and add one test

* Minor improovements + tests

* Complete tests and documentation

* Fix test on arm